fix for chromosome image on IE6

--- a/htdocs/components/55_genomic_markup.css
+++ b/htdocs/components/55_genomic_markup.css
@@ -80,6 +80,7 @@ div.synteny_forms    form div.form-field select.fselect,
 div.chromosome_stats form div.form-field select.fselect   { width: 120px; }
 div.chromosome_stats form div.form-field input.fbutton    { margin-right: 0; }
 
-body.ie6 div.synteny_image                                { float: none; }
-body.ie6 div.synteny_forms                                { float: none; }
-
+body.ie6 div.synteny_image,
+body.ie6 div.synteny_forms,
+body.ie6 div.chromosome_image,
+body.ie6 div.chromosome_stats                             { float: none; }
